Adding another test

--- a/Sample-project-1/Sample-project-1/Base.lproj/Main.storyboard
+++ b/Sample-project-1/Sample-project-1/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                     </view>
                     <connections>
                         <outlet property="titleLabel" destination="fds-VK-9ye" id="JTS-ZY-foI"/>
+                        <outlet property="transitionButton" destination="HnG-7E-9K8" id="WhB-gx-VTb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
